Fix OSD text,  not centered though

--- a/fancypants.css
+++ b/fancypants.css
@@ -21,6 +21,7 @@ iframe {
 	width: 100%;
 	height: 100%;
 	margin: 0;
+	overflow: hidden;
 }
 
 iframe.current {
@@ -39,11 +40,17 @@ iframe.loading {
 }
 
 #osd {
-	color: gold;
 	display: none;
 	position: absolute;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100%;
+	text-align: center;
+	vertical-align: middle;
+	margin: 0 auto;
+	z-index: 999;
+
+	color: rgba(65, 105, 225, 0.5);
+	text-shadow: 8px 8px 0 rgba(255,0,180,0.5);
 }
